--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marcelo Santos - Desenvolvedor e Designer</title>
   <link rel="stylesheet" href="./css/styles.css">
@@ -62,14 +61,15 @@
         <span class="empresa-ano">2020-2021</span>
         <h3 class="empresa-titulo">Aunica Web</h3>
         <span class="empresa-titulo">Lead Web Designer</span>
-        <p class="empresa-texto">Acting in the development of websites through Nocode tools with
-          Elementor
-          for Wordpress. Due to clients demands and limitations of the tools, it was necessary to
-          improve and
-          started coding the sites from scratch using HTML, CSS, Javascript and the use of the Bulma
-          framework for CSS.
-          Creating interactive Uis with React, developing external Apis with Node.js , using Mongodb
-          as a database.
+        <p class="empresa-texto">Atuação no desenvolvimento de sites através de ferramentas NoCode
+          com o Elementor para o WordPress.
+          Devido a demanda de clientes e limitações das ferramentas, foi necessário aprimorar e
+          começou-se a
+          codificar os sites do zero utilizando HTML, CSS, JavaScript e a utilização do framework
+          Bulma para CSS.
+          Criação de UIs interativas com React, desenvolvimento de APIs externos com Node.js ,
+          utilizando MongoDB
+          como banco de dados
         </p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
@@ -85,14 +85,13 @@
 
       <div class="empresa">
         <span class="empresa-ano">2020-2021</span>
-        <h3 class="empresa-titulo">BIMMS</h3>
+        <h3 class="empresa-titulo">Desuka Design</h3>
         <span class="empresa-titulo">UI Design | Front End</span>
-        <p class="empresa-texto">Creation of the interface design, transforming it into the final
-          product.
-          Using Figma as a tool for the development of the interface and after approval of the
-          client,
-          development of the code in HTML and CSS with frameworks such as Bulma, Tailwind or
-          Bootstrap. Use of Javascript daily.
+        <p class="empresa-texto">Criação do design de interface, transformando a mesma no produto
+          final. Utilizando Figma como
+          ferramenta para o desenvolvimento da interface e após aprovação do cliente,
+          desenvolvimento do código
+          em HTML e CSS com frameworks como Bulma, TailWind ou Bootstrap. Utilização de JavaScript.
         </p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
@@ -108,6 +107,55 @@
     </div>
   </section>
 
+
+  <section class="formacao" id="formacao" aria-label="Formação">
+    <div class="formacao-container">
+      <h2 class="subtitulo">Formação</h2>
+
+      <div>
+        <p class="formacao-texto">Minha mais recente experiência foi o <strong>Fullstack
+            JavaScript</strong>
+          que cursei na <strong>One Bit Code</strong>. Além disso me mantenho sempre atualizado com
+          cursos
+          intensivos online.
+        </p>
+        <ul class="lista">
+          <li class="curso1">
+            <span class="curso-tipo">Fullstack</span>
+            <h3 class="curso-lingua">JavaScript</h3>
+            <span class="curso-instituicao">One Bit Code</span>
+          </li>
+          <li class="curso1">
+            <span class="curso-tipo">UX/UI DESIGN</span>
+            <h3 class="curso-lingua">Design de Interfaces e usabilidade</h3>
+            <span class="curso-instituicao">UIBOOST</span>
+          </li>
+          <li class="curso1">
+            <span class="curso-tipo">Web Design Completo</span>
+            <h3 class="curso-lingua">HTML | CSS | JavaScript</h3>
+            <span class="curso-instituicao">Origamid</span>
+          </li>
+        </ul>
+
+        <div class="formacao-extra">
+          <div class="cursos">
+            <h3>Cursos Intensivos</h3>
+            <ul>
+              <li>Design Circuit <span>80h</span></li>
+              <li>Cisco IT Essentials <span>50h</span></li>
+            </ul>
+          </div>
+          <div class="idiomas">
+            <h3>Idiomas</h3>
+            <ul>
+              <li>Inglês <span>/ Intermediário</span></li>
+              <li>Português <span>/ Nativo</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
