--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marcelo Santos - Desenvolvedor e Designer</title>
+  <meta name="description" content="Desenvolvedor Front End & UX/UI Designer">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -21,7 +22,7 @@
   </header>
 
   <main class="introducao">
-    <img src="./img/perfil.jpg" alt="Marcelo Santos">
+    <img src="./img/perfil.jpg" alt="Marcelo Santos" width="360px" height="520px">
     <div>
       <h1>Desenvolvedor <br> Front End & <br> UX/UI Designer</h1>
       <p>Localizado em Porto - Portugal</p>
@@ -156,6 +157,22 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer" id="contato">
+
+    <div class="footer-container">
+      <p class="footer-texto">Estou disponível para novos projetos.
+        Entre em contato comigo e marcamos uma conversa. </p>
+      <ul class="footer-contato">
+        <li>marcelocrs1@outlook.com</li>
+        <li>+351 912 261 582</li>
+        <li><a href="www.instagram.com/marcelocrs1">@marcelocrs1</a></li>
+      </ul>
+      <p class="footer-copy">Marcelo Santos. Todos os direitos reservados.</p>
+    </div>
+
+  </footer>
+
 </body>
 
 </html>
