--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <h2 class="subtitulo">Experiência</h2>
     <div>
       <p class="experiencia-texto">Sou desenvolvedor Front End com experiência em
-        <strong>Javascript</strong>,
-        <strong>HTML</strong>, <strong>CSS</strong> e no framework <strong>VUEJS.</strong>
+        <strong>VueJS</strong>,
+        <strong>HTML</strong>, <strong>CSS.</strong>
         Para aplicativos web e websites, trabalhei em projetos
         como <strong>UX</strong> e <strong>UI</strong> Design.
       </p>
@@ -43,9 +43,13 @@
         <span class="empresa-ano">2022</span>
         <h3 class="empresa-titulo">BIMMS</h3>
         <span class="empresa-titulo">Product Design | Front End</span>
-        <p class="empresa-texto">Atuo com o design dos projetos de desenvolvimentos da empresa e o
-          Front End de todos os projetos de desenvolvimentos de
-          softwares para a área de engenharia civil.
+        <p class="empresa-texto">Atuo em todo o processo do design desde a concepção até a
+          programação
+          dos projetos de desenvolvimento de softwares para o setor AECO.
+          O maior projeto é MS - Management Solutions, um web software que proporciona um ambiente
+          de colaboração para definir, gerar e gerir continuamente os dados do seu projecto ao longo
+          de todo o seu ciclo de vida.
+
         </p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
@@ -62,7 +66,7 @@
         <span class="empresa-ano">2020-2021</span>
         <h3 class="empresa-titulo">Aunica Web</h3>
         <span class="empresa-titulo">Lead Web Designer</span>
-        <p class="empresa-texto">Atuação no desenvolvimento de sites através de ferramentas NoCode
+        <p class="empresa-texto">Atuação no desenvolvimento de sites desde a criação do design e o desenvolver através de ferramentas NoCode
           com o Elementor para o WordPress.
           Devido a demanda de clientes e limitações das ferramentas, foi necessário aprimorar e
           começou-se a
