--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <strong>VueJS</strong>,
         <strong>HTML</strong>, <strong>CSS.</strong>
         Para aplicativos web e websites, trabalhei em projetos
-        como <strong>UX</strong> e <strong>UI</strong> Design.
+        como <strong>UX</strong> e <strong>UI</strong> Designer.
       </p>
 
       <div class="empresa">
@@ -146,6 +146,7 @@
           <div class="cursos">
             <h3>Cursos Intensivos</h3>
             <ul>
+              <li>Figma Course <span>20h</span></li>
               <li>Design Circuit <span>80h</span></li>
               <li>Cisco IT Essentials <span>50h</span></li>
             </ul>
