--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marcelo Santos - Desenvolvedor e Designer</title>
+  <title>Marcelo Santos - UI Designer - Front End Developer</title>
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -14,9 +14,9 @@
     <img src="./img/marca.svg" alt="Marcelo Santos">
     <nav>
       <ul class="header-menu">
-        <li><a href="#experiencia">Experiência</a></li>
-        <li><a href="#formacao">Formação</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="#experiencia">Expertise</a></li>
+        <li><a href="#formacao">Education</a></li>
+        <li><a href="#contato">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -24,31 +24,25 @@
   <main class="introducao">
     <img src="./img/perfil.jpg" alt="Marcelo Santos" width="360px" height="520px">
     <div>
-      <h1>Desenvolvedor <br> Front End & <br> UX/UI Designer</h1>
-      <p>Localizado em Porto - Portugal</p>
+      <h1>UI Designer &<br> Front End <br> Developer</h1>
+      <p>Located in Porto - Portugal</p>
     </div>
   </main>
 
   <section class="experiencia" id="experiencia" aria-label="Experiência">
-    <h2 class="subtitulo">Experiência</h2>
+    <h2 class="subtitulo">Expertise</h2>
     <div>
-      <p class="experiencia-texto">Sou desenvolvedor Front End com experiência em
+      <p class="experiencia-texto">I'm a Front End developer with experience in
         <strong>VueJS</strong>,
         <strong>HTML</strong>, <strong>CSS.</strong>
-        Para aplicativos web e websites, trabalhei em projetos
-        como <strong>UX</strong> e <strong>UI</strong> Designer.
+        For web applications and websites, I worked on projects such as <strong>UI</strong> Designer.
       </p>
 
       <div class="empresa">
         <span class="empresa-ano">2022</span>
         <h3 class="empresa-titulo">BIMMS</h3>
-        <span class="empresa-titulo">Product Design | Front End</span>
-        <p class="empresa-texto">Atuo em todo o processo do design desde a concepção até a
-          programação
-          dos projetos de desenvolvimento de softwares para o setor AECO.
-          O maior projeto é MS - Management Solutions, um web software que proporciona um ambiente
-          de colaboração para definir, gerar e gerir continuamente os dados do seu projecto ao longo
-          de todo o seu ciclo de vida.
+        <span class="empresa-titulo">UI/UX Designer  | Front End</span>
+        <p class="empresa-texto">Acting in the entire process of software design for the AECO sector. Design of wireframes and low and high fidelity prototypes made in Figma up to front end programming using the VueJS framework. The biggest project is MS - Management Solutions, a web software that provides a collaborative environment to continuously define, generate and manage the data of a construction project.
 
         </p>
         <ul class="empresa-habilidades">
@@ -65,16 +59,8 @@
       <div class="empresa">
         <span class="empresa-ano">2020-2021</span>
         <h3 class="empresa-titulo">Aunica Web</h3>
-        <span class="empresa-titulo">Lead Web Designer</span>
-        <p class="empresa-texto">Atuação no desenvolvimento de sites desde a criação do design e o desenvolver através de ferramentas NoCode
-          com o Elementor para o WordPress.
-          Devido a demanda de clientes e limitações das ferramentas, foi necessário aprimorar e
-          começou-se a
-          codificar os sites do zero utilizando HTML, CSS, JavaScript e a utilização do framework
-          Bulma para CSS.
-          Criação de UIs interativas com React, desenvolvimento de APIs externos com Node.js ,
-          utilizando MongoDB
-          como banco de dados
+        <span class="empresa-titulo">UI Designer – Front End </span>
+        <p class="empresa-texto">Acting in the development of websites of various sectors since the creation of wireframes and initial mockups until the final delivery of the project. Responsible for the creation of low and high fidelity prototyping along with all the usability study of the users. Creation of dynamic UIs with VueJS.
         </p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
@@ -92,11 +78,7 @@
         <span class="empresa-ano">2020-2021</span>
         <h3 class="empresa-titulo">Desuka Design</h3>
         <span class="empresa-titulo">UI Design | Front End</span>
-        <p class="empresa-texto">Criação do design de interface, transformando a mesma no produto
-          final. Utilizando Figma como
-          ferramenta para o desenvolvimento da interface e após aprovação do cliente,
-          desenvolvimento do código
-          em HTML e CSS com frameworks como Bulma, TailWind ou Bootstrap. Utilização de JavaScript.
+        <p class="empresa-texto">Creation of the interface design, transforming it into the final product. Using Figma as a tool for the development of the interface and after approval of the client, development of the code in HTML and CSS with framework VueJS. 
         </p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
@@ -115,16 +97,18 @@
 
   <section class="formacao" id="formacao" aria-label="Formação">
     <div class="formacao-container">
-      <h2 class="subtitulo">Formação</h2>
+      <h2 class="subtitulo">Education</h2>
 
       <div>
-        <p class="formacao-texto">Minha mais recente experiência foi o <strong>Fullstack
-            JavaScript</strong>
-          que cursei na <strong>One Bit Code</strong>. Além disso me mantenho sempre atualizado com
-          cursos
-          intensivos online.
+        <p class="formacao-texto">My most recent experience was the <strong>Alura</strong>
+          course. In addition, I always keep up to date with intensive online courses..
         </p>
         <ul class="lista">
+          <li class="curso1">
+            <span class="curso-tipo">Front End</span>
+            <h3 class="curso-lingua">VueJS</h3>
+            <span class="curso-instituicao">Alura</span>
+          </li>
           <li class="curso1">
             <span class="curso-tipo">Fullstack</span>
             <h3 class="curso-lingua">JavaScript</h3>
@@ -132,11 +116,11 @@
           </li>
           <li class="curso1">
             <span class="curso-tipo">UX/UI DESIGN</span>
-            <h3 class="curso-lingua">Design de Interfaces e usabilidade</h3>
+            <h3 class="curso-lingua">Interface Design & Usability</h3>
             <span class="curso-instituicao">UIBOOST</span>
           </li>
           <li class="curso1">
-            <span class="curso-tipo">Web Design Completo</span>
+            <span class="curso-tipo">Web Design Complete</span>
             <h3 class="curso-lingua">HTML | CSS | JavaScript</h3>
             <span class="curso-instituicao">Origamid</span>
           </li>
@@ -144,7 +128,7 @@
 
         <div class="formacao-extra">
           <div class="cursos">
-            <h3>Cursos Intensivos</h3>
+            <h3>Intensive Courses</h3>
             <ul>
               <li>Figma Course <span>20h</span></li>
               <li>Design Circuit <span>80h</span></li>
@@ -154,8 +138,8 @@
           <div class="idiomas">
             <h3>Idiomas</h3>
             <ul>
-              <li>Inglês <span>/ Intermediário</span></li>
-              <li>Português <span>/ Nativo</span></li>
+              <li>Inglês <span>/ B2</span></li>
+              <li>Português <span>/ Native</span></li>
             </ul>
           </div>
         </div>
@@ -166,14 +150,13 @@
   <footer class="footer" id="contato">
 
     <div class="footer-container">
-      <p class="footer-texto">Estou disponível para novos projetos.
-        Entre em contato comigo e marcamos uma conversa. </p>
+      <p class="footer-texto">I am available for new projects. Contact me and let's schedule a conversation. </p>
       <ul class="footer-contato">
         <li>marcelocrs1@outlook.com</li>
         <li>+351 912 261 582</li>
         <li><a href="www.instagram.com/marcelocrs1">@marcelocrs1</a></li>
       </ul>
-      <p class="footer-copy">Marcelo Santos. Todos os direitos reservados.</p>
+      <p class="footer-copy">Marcelo Santos. All rights reserved.</p>
     </div>
 
   </footer>
