--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p class="experiencia-texto">I'm a Front End developer with experience in
         <strong>VueJS</strong>,
         <strong>HTML</strong>, <strong>CSS.</strong>
-        For web applications and websites, I worked on projects such as <strong>UI</strong> Designer.
+        For web applications and websites, I worked on projects as <strong>UI</strong> Designer.
       </p>
 
       <div class="empresa">
@@ -60,7 +60,7 @@
         <span class="empresa-ano">2020-2021</span>
         <h3 class="empresa-titulo">Aunica Web</h3>
         <span class="empresa-titulo">UI Designer – Front End </span>
-        <p class="empresa-texto">Acting in the development of websites of various sectors since the creation of wireframes and initial mockups until the final delivery of the project. Responsible for the creation of low and high fidelity prototyping along with all the usability study of the users. Creation of dynamic UIs with VueJS.
+        <p class="empresa-texto">Responsable for the development of websites of various sectors since the creation of wireframes and initial mockups until the final delivery of the project. Responsible for the creation of low and high fidelity prototyping along with all the usability study of the users. Creation of dynamic UIs with VueJS.
         </p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
